--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="nav">
         <div class="nav-menu flex-row">
             <div class="nav-brand">
-                <a href="#" class="text-gray">Blogger</a>
+                <a href="#" class="text-gray">DribbledDoodle</a>
             </div>
 
             <div class="toggle-collapse">
@@ -55,6 +55,11 @@
     </nav>
 
     <!-- Navigation-->
+
+
+    <!-- Custom Jquery Library file -->
+    <script src="./js/Jquery3.5.1.min.js"></script>
+
 
     <!-- Custom Javascript file -->
     <script src="./js/main.js"></script>
