--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>dribbleddoodle</title>
 
-    <!-- Font Awesome Icons-->
+    <!--------------------------- Font Awesome Icons-------------------------------------------->
     <link rel="stylesheet" href="./css/all.css">
 
 
-    <!-- Custom Style -->
+    <!--------------------------- Custom Style ----------------------------------------------------->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
-    <!-- Navigation-->
+    <!--------------------------------------------------- Navigation-------------------------------->
 
     <nav class="nav">
         <div class="nav-menu flex-row">
@@ -54,14 +54,40 @@
         </div>
     </nav>
 
-    <!-- Navigation-->
+    <!-------------------)(---------------------------- Navigation---------------)(--------------->
 
 
-    <!-- Custom Jquery Library file -->
+
+    <!------------------------------------  Main Site Section ------------------------------------->
+
+    <main>
+
+        <!------------------------------------- Site Title ------------------------------------------->
+
+       <section class="site-title">
+           <div class="site-background">
+               <h3>Pavithra Suresh Blog</h3> 
+               <br>
+               <h1>Magic of Words! &nbsp Flown with Emotions!</h1>
+               <button class="btn">Explore</button>
+           </div>
+       </section>
+
+
+        <!----------------)(--------------------- Site Title ------------------)(---------------------->
+
+    </main>
+    
+
+
+    <!-------------------)(-----------------  Main Site Section ------------------)(-------------->
+
+
+    <!-------------------------------------- Custom Jquery Library file -------------------------------------->
     <script src="./js/Jquery3.5.1.min.js"></script>
 
 
-    <!-- Custom Javascript file -->
+    <!-------------------------------------- Custom Javascript file --------------------------------------------->
     <script src="./js/main.js"></script>
 </body>
 </html>
