updated home page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
            <div class="site-background">
                <h3>Pavithra Suresh Blog</h3> 
                <br>
-               <h1>Magic of Words! &nbsp Flown with Emotions!</h1>
+               <h1><span style="background-color: #fbffb9;">Magic of Words! &nbsp Flown with Emotions!</span></h1>
                <button class="btn">Explore</button>
            </div>
        </section>
