--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>dribbleddoodle</title>
 
-    <!--------------------------- Font Awesome Icons-------------------------------------------->
+    <!-------------------- Font Awesome Icons-------------------------------->
     <link rel="stylesheet" href="./css/all.css">
 
 
-    <!--------------------------- Custom Style ----------------------------------------------------->
+    <!-------------------------Owl-Carousel -------------------------------->
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
+
+
+    <!----------------------- Custom Style ----------------------------------->
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
     
@@ -76,6 +82,100 @@
 
         <!----------------)(--------------------- Site Title ------------------)(---------------------->
 
+
+
+        <!------------------------------- Blog Carousel-------------------------------------------->
+
+        <section>
+            <div class="blog">
+                <div class="container">
+                    <div class="owl-carousel owl-theme blog-post">
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/travel.jpg" alt="travel">
+                            <div class="blog-title">
+                                <h3>Fly free! Fly high!</h3>
+                                <button class="btn btn-blog">Travel</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/relationship.jpg" alt="relationship">
+                            <div class="blog-title">
+                                <h3>Some are just meant to be felt</h3>
+                                <button class="btn btn-blog">Relationship</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/motivation.jpg" alt="motivation">
+                            <div class="blog-title">
+                                <h3>Just an unskilled feature</h3>
+                                <button class="btn btn-blog">Motivation</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/program.jpg" alt="program">
+                            <div class="blog-title">
+                                <h3>Love expressed in Programming</h3>
+                                <button class="btn btn-blog">Pain</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/food.jpg" alt="food">
+                            <div class="blog-title">
+                                <h3>Feel of Food!</h3>
+                                <button class="btn btn-blog">Food</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/love.jpg" alt="love">
+                            <div class="blog-title">
+                                <h3>over and over, I fall for you</h3>
+                                <button class="btn btn-blog">Love</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/midnight.jpg" alt="midnight">
+                            <div class="blog-title">
+                                <h3>Midnight Memories</h3>
+                                <button class="btn btn-blog">Midnight</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/breakup.jpg" alt="breakup">
+                            <div class="blog-title">
+                                <h3>Scars of the Past</h3>
+                                <button class="btn btn-blog">Pain</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/aim.jpg" alt="aim">
+                            <div class="blog-title">
+                                <h3>Movies vs Aim</h3>
+                                <button class="btn btn-blog">Aim</button>
+                                <span>1 minute</span>
+                            </div>              
+                        </div>
+                    </div>
+                    <div class="owl-navigation">
+                        <span class="owl-nav-prev"><i class="fas fa-long-arrow-alt-left"></i></span>
+                        <span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+        <!-----------------)(-------------- Blog Carousel-------------------------)9------------------->
+
+
     </main>
     
 
@@ -83,11 +183,15 @@
     <!-------------------)(-----------------  Main Site Section ------------------)(-------------->
 
 
-    <!-------------------------------------- Custom Jquery Library file -------------------------------------->
+    <!---------------------- Custom Jquery Library file -------------------->
     <script src="./js/Jquery3.5.1.min.js"></script>
 
 
-    <!-------------------------------------- Custom Javascript file --------------------------------------------->
+    <!-------------------------Owl-Carousel -------------------------------->
+    <script src="./js/owl.carousel.min.js"></script>
+
+
+    <!------------------ Custom Javascript file -------------------------->
     <script src="./js/main.js"></script>
 </body>
 </html>
