--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <img src="./assets/Blog-post/breakup.jpg" alt="breakup">
                             <div class="blog-title">
                                 <h3>Scars of the Past</h3>
-                                <button class="btn btn-blog">Motivation</button>
+                                <button class="btn btn-blog">Pain</button>
                                 <span>short story</span>
                             </div>              
                         </div>
@@ -123,7 +123,7 @@
                             <img src="./assets/Blog-post/program.jpg" alt="program">
                             <div class="blog-title">
                                 <h3>Love as Programming</h3>
-                                <button class="btn btn-blog">Pain</button>
+                                <button class="btn btn-blog">Love</button>
                                 <span>microtale</span>
                             </div>              
                         </div>
@@ -147,7 +147,7 @@
                             <img src="./assets/Blog-post/midnight.jpg" alt="midnight">
                             <div class="blog-title">
                                 <h3>Midnight Memories</h3>
-                                <button class="btn btn-blog">Midnight</button>
+                                <button class="btn btn-blog">Night Tales</button>
                                 <span>microtale</span>
                             </div>              
                         </div>
