--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                <h3>Pavithra Suresh Blog</h3> 
                <br>
                <h1><span style="background-color: #fbffb9;">Magic of Words! &nbsp Flown with Emotions!</span></h1>
-               <button class="btn" id="explore">Explore</button>
+               <button class="btn">Explore</button>
            </div>
        </section>
 
@@ -95,7 +95,7 @@
         <!------------------------------- Blog Carousel-------------------------------------------->
 
         <section>
-            <div class="blog" id="explore">
+            <div class="blog">
                 <div class="container">
                     <div class="owl-carousel owl-theme blog-post">
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
